[project]
name = "seo-master-bot"
version = "2.0.0"
description = "Telegram bot for AI-powered SEO content creation & multi-platform publishing"
requires-python = ">=3.14"
dependencies = [
    # Bot framework
    "aiogram>=3.25",
    # Data validation & settings
    "pydantic>=2.12",
    "pydantic-settings>=2.12",
    # Database (PostgREST + GoTrue — lightweight, no C++ build tools needed)
    "postgrest>=2.27",
    "gotrue>=2.12",
    # Cache & scheduler
    "upstash-redis>=1.6",
    "qstash>=3.2",
    # AI (OpenRouter via OpenAI-compatible SDK v2)
    "openai>=2.20",
    # HTTP client
    "httpx>=0.28",
    # External APIs
    "firecrawl-py>=4.14",
    "yookassa>=3.10",
    # Security
    "cryptography>=46.0",
    # HTML sanitization (ARCHITECTURE.md §5.8)
    "nh3>=0.2",
    # Image processing (WebP conversion, ARCHITECTURE.md §5.9)
    "pillow>=11.0",
    # Templates
    "jinja2>=3.1",
    "pyyaml>=6.0",
    # Monitoring
    "structlog>=25.0",
    "sentry-sdk[httpx]>=2.50",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-timeout>=2.4",
    "pytest-cov>=7.0",
    "ruff>=0.15",
    "mypy>=1.19",
    "types-pyyaml>=6.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "S", "C901", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]
"routers/**/*.py" = ["RUF001", "RUF002"]
"keyboards/**/*.py" = ["RUF001", "RUF002"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
no_error_summary = true
